# gnss-signal-simulator-rs

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FILE_STATUS.md  README.md  README.ru.md  TODO_ANALYSIS.md  TODO_FULL_VERIFICATION.md  TODO_PERFORMANCE_FIXES.md  debug_satellite_params.rs  generate_test_if.rs  phase_continuity_check.py  simple_param_test.rs  spectrum.csv  test_bds_multi.rnx  test_bds_multi_temp  test_bds_small.rnx  test_rinex  test_rinex.rs  test_rinex_validation_simple.rs  verify_signal.py  verify_signal_enhanced.py
docs/: code_audit_2026-05-31.md
generated_files/: GPS_L1_only_10s.C8
presets/: BDS_B1C_Only.json  GAL_E5a_only.json  GAL_E5b_only.json  GAL_E6_only.json  GLO_G1_only.json  GLO_G2_only.json  GLO_G3_only.json  GPS_BDS_GAL_GLO_L1G1_46MHz.json  GPS_BDS_GAL_L1_5MHz.json  GPS_BDS_GAL_test_1s.json  GPS_BDS_GAL_triple_system.json  GPS_L1CA_BDS_B1C_dual.json  GPS_L1_only.json  bds_b1c.json  bds_b1i.json  bds_b1i_b1c.json  bds_b2a.json  bds_b2b.json  bds_b2i_b2b.json  bds_b3i.json  gal_bds_e5b_b2b.json  gal_bds_l1.json  gal_e1.json  gal_e5a.json  gal_e5b.json  gal_e6.json  glo_g1.json  glo_g2.json  glo_g3.json  gps_bds_gal_l1.json  gps_bds_gal_l1_b1i.json  gps_bds_gal_l1_full.json  gps_bds_gal_l2e5b.json  gps_bds_gal_l5e5a.json  gps_bds_glo_l2.json  gps_bds_l1.json  gps_bds_l5b2a.json  gps_gal_l1.json  gps_gal_l5e5a.json  gps_glo_l1g1.json  (+11 more)
src/: almanac.rs  avx512_intrinsics.rs  bcnav1bit.rs  bcnav2bit.rs  bcnav3bit.rs  bcnavbit.rs  benchmarks.rs  cnav2bit.rs  cnavbit.rs  complex_number.rs  constants.rs  coordinate.rs  crc24q.rs  ldpc.rs  (+29 more)
(+6 files in other folders)
